fix services section mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@ body {
   left: 0;
   bottom: 0;
   height: 1px;
-  background-color: #fac000;
+  background-color: #dfac04;
   width: 100%;
 }
 
